--- a/WebApplication2/Views/Shared/_Layout.cshtml
+++ b/WebApplication2/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color:dimgray" >
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">WebApplication2</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">EEFA SERAM</a>
             </div>
             <div class="navbar-collapse collapse">
 
@@ -37,14 +37,12 @@
         </div>
     </nav>
 
-
-
     <div class="l-navbar" id="navbar">
         <nav class="nav">
             <div>
                 <a href="#" class="nav__logo">
-                    <img src="assets/icons/logo.svg" alt="" class="nav__logo-icon">
-                    <span class="nav__logo-text">Bedimcode</span>
+                    <img src="~/img/6.png" alt=""  width ="90" height="60" class="nav__logo-icon">
+                    <span class="nav__logo-text"></span>
                 </a>
 
                 <div class="nav__toggle" id="nav-toggle">
@@ -53,36 +51,36 @@
 
                 <ul class="nav__list">
                     <a href="#" class="nav__link active">
-                        <i class='bx bx-grid-alt nav__icon'></i>
-                        <span class="nav__text">Home</span>
+                        <i class='bx bx-grid-alt nav__icon' ></i>
+                        <span class="nav__text">خانه</span>
                     </a>
                     <a href="~/List/" class="nav__link">
                         <i class='bx bx-user nav__icon'></i>
-                        <span class="nav__text">User</span>
+                        <span class="nav__text">لیست</span>
                     </a>
                     <a href="#" class="nav__link">
                         <i class='bx bx-bell nav__icon'></i>
-                        <span class="nav__text">Notification</span>
+                        <span class="nav__text"> اطلاعات</span>
                     </a>
                     <a href="#" class="nav__link">
                        
                         <i class='bx bx-heart nav__icon'></i>
-                        <span class="nav__text">Favorites</span>
+                        <span class="nav__text"> ادمین</span>
                     </a>
                     <a href="#" class="nav__link">
                         <i class='bx bx-bookmark nav__icon'></i>
-                        <span class="nav__text">Saved</span>
+                        <span class="nav__text">دسترسی </span>
                     </a>
                     
                         <a href="~/ScaffoldingUser/" class="nav__link">
                             <i class='bx bx-message-rounded nav__icon'></i>
-                            <span class="nav__text">users managment</span>
+                            <span class="nav__text">کاربران </span>
                         </a>
 </ul>
             </div>
             <a href="#" class="nav__link">
                 <i class='bx bx-log-out-circle nav__icon'></i>
-                <span class="nav__text">Close</span>
+                <span class="nav__text">خروج</span>
             </a>
         </nav>
     </div>
@@ -92,7 +90,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2021 - WebApplication2</p>
+            <p>&copy; 2021 - EEFA SERAM DIGITAL</p>
         </footer>
     </div>
 
