--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -5,9 +5,6 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- STYLES CSS -->
-
-<link href="~/css/boxicons.min.css" rel="stylesheet" />
-<link href="~/css/site.css" rel="stylesheet" />
 <!-- BOX ICONS CSS-->
 <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 <title>Sidebar menu</title>
@@ -19,9 +16,9 @@
         EEFA SERAM
     </p>
     <br /><br /><br />
-    <div class="navbar ">
-        <form>
-            <ul class=" alert-danger active">
+    @*<div class="navbar ">*@
+        @*<form>
+            <ul class=" alert-danger active" style=" width : auto; height : auto">
                 <li style=" width : auto; height : auto ">
 
 
@@ -31,8 +28,8 @@
 
 
             </ul>
-        </form>
+        </form>*@
 
-        <script src="~/js/main.js"></script>
-    </div>
+        @*<script src="~/js/main.js"></script>
+    </div>*@
 </body>
