--- a/WebApplication2/Views/ScaffoldingUser/Delete.cshtml
+++ b/WebApplication2/Views/ScaffoldingUser/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model AspNetCoreMvc.Models.Entities.Users
+﻿@*@model WebApplication2.Models.Entities.Users
 
 @{
     ViewData["Title"] = "Delete";
@@ -48,4 +48,4 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
-</div>
+</div>*@
