--- a/WebApplication2/Views/ScaffoldingUser/Details.cshtml
+++ b/WebApplication2/Views/ScaffoldingUser/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model AspNetCoreMvc.Models.Entities.Users
+﻿@*@model WebApplication2.Models.Entities.Users
 
 @{
     ViewData["Title"] = "Details";
@@ -46,4 +46,4 @@
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
     <a asp-action="Index">Back to List</a>
-</div>
+</div>*@
