--- a/WebApplication2/Views/ScaffoldingUser/Edit.cshtml
+++ b/WebApplication2/Views/ScaffoldingUser/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model AspNetCoreMvc.Models.Entities.Users
+﻿@*@model WebApplication2.Models.Entities.Users
 
 @{
     ViewData["Title"] = "Edit";
@@ -51,4 +51,4 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+}*@
