--- a/WebApplication2/Views/ScaffoldingUser/Index.cshtml
+++ b/WebApplication2/Views/ScaffoldingUser/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<AspNetCoreMvc.Models.Entities.Users>
+﻿@*@model IEnumerable<WebApplication2.Models.Entities.Users>
 
 @{
     ViewData["Title"] = "Index";
@@ -57,4 +57,4 @@
         </tr>
 }
     </tbody>
-</table>
+</table>*@
