--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -14,6 +14,7 @@
     <h2>EEFA</h2>
     <p>
         EEFA SERAM
+        EEFA CERAM
     </p>
     <br /><br /><br />
     @*<div class="navbar ">*@
