--- a/WebApplication2/Views/Home/Index.cshtml
+++ b/WebApplication2/Views/Home/Index.cshtml
@@ -19,6 +19,7 @@
     <br /><br /><br />
     @*<div class="navbar ">*@
         @*<form>
+            //farzad//
             <ul class=" alert-danger active" style=" width : auto; height : auto">
                 <li style=" width : auto; height : auto ">
 
